Добавил отображение версии клиентской части

--- a/src/index.html
+++ b/src/index.html
@@ -82,6 +82,9 @@
         css: { currentResults: !canSearch() }"></span>
       <!-- /ko -->
     </div>
+    <div style="position: absolute; bottom: 1rem; left: 1.5rem;
+         font-size: x-small; color: rgba(40,40,40,.3);"
+      data-bind="text: version"></div>
   </div>
 
   <div class="bmpp-main" style="position: relative">
