Ссылка на главную страницу

--- a/src/index.html
+++ b/src/index.html
@@ -83,6 +83,13 @@
         css: { currentResults: !canSearch() }"></span>
       <!-- /ko -->
     </div>
+
+    <a href="http://multidiscourse.ru/"
+    style="position: absolute; top: 18.6rem; left: 1.5rem;
+         font-size: x-small; color: green; border-bottom: 1px dotted green;
+         line-height: 1.3em; font-weight: bold; letter-spacing: 0.03em;">
+      www.multidiscourse.ru
+    </a>
     <div style="position: absolute; bottom: 1rem; left: 1.5rem;
          font-size: x-small; color: rgba(40,40,40,.3);"
       data-bind="text: version"></div>
