Репозиторий переехал с rollup на gulp, с semantic-ui на fomantic-ui,
а сетевые запросы теперь выполняет WebWorker

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="semantic/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="plyr.css">
+    <link rel="stylesheet" type="text/css" href="bumppo.css">
   </head>
   <body style="position: relative">
 
