Отображать небольшую порцию результатов, чтобы браузер не зависал.
Остальные результаты будут подгружаться по мере прокрутки

--- a/src/index.html
+++ b/src/index.html
@@ -139,7 +139,7 @@
 
     <!-- ko if: isResultsPaneOn -->
     <div class="bmpp-resultsPane" data-bind="component: {
-        name: 'results-pane', params: { resultsRawData: resultsRawData }}"></div>
+        name: 'results-pane', params: { resultsData: resultsData }}"></div>
     <!-- /ko -->
 
   </div>
