Подгрузка оставшихся результатов по мере прокрутки страницы

--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
 
     <div id="bmpp-mainWait" data-bind="visible: isSearchInProgress">
       <div class="ui active inverted dimmer">
-        <div class="ui text loader" style="color: #767676"
+        <div class="ui text loader" style="color: #767676; font-size: smaller"
           data-bind="text: searchStatus"></div>
         <button class="ui mini basic button"
           data-bind="click: abortLastRequest, fadeVisible: canSearchBeAborted"
