--- a/src/index.html
+++ b/src/index.html
@@ -168,6 +168,8 @@
       crossorigin="anonymous"></script>
     <script src="js/libs/svg.min.js"></script>
     <script src="js/libs/jquery.initialize.min.js"></script>
+    <script src="https://cdn.dashjs.org/latest/dash.all.min.js"
+      crossorigin="anonymous"></script>
     <script src="js/spa.js"></script>
   </body>
 </html>
