--- a/src/index.html
+++ b/src/index.html
@@ -127,12 +127,12 @@
       <!-- /ko -->
       <!-- ko if: queryPaneView.arePropertiesVisible -->
       <div class="bmpp-propertiesPane">
-        <div class="bmpp-propertiesPaneProps"><div class="bmpp-paddedPane">
+        <div class="bmpp-paneProps"><div class="bmpp-paddedPane">
             <properties-pane params="node: queryPaneView.propertiesNode"
               ></properties-pane>
         </div></div>
-        <div class="bmpp-propertiesPaneDivider"></div>
-        <div class="bmpp-propertiesPaneButtons">
+        <div class="bmpp-paneDivider"></div>
+        <div class="bmpp-paneButtons">
             <button class="ui small button"
               data-bind="click: queryPaneView.finishEditingNodeProperties"
               >ОК</button>
@@ -140,6 +140,27 @@
               queryPaneView.propertiesNode().clearAllProperties
                 .bind(queryPaneView.propertiesNode())"
               >Очистить</button>
+        </div>
+      </div>
+      <!-- /ko -->
+      <!-- ko if: queryPaneView.areRelationsVisible -->
+      <div class="bmpp-relationsPane">
+        <div class="bmpp-paneProps"><div class="bmpp-paddedPane">
+            <relations-pane params="node1: queryPaneView.relationsNode1,
+            node2: queryPaneView.relationsNode2"></relations-pane>
+        </div></div>
+        <div class="bmpp-paneDivider"></div>
+        <div class="bmpp-paneButtons">
+            <button class="ui small button"
+              data-bind="click: queryPaneView.finishEditingNodeRelations
+                .bind(queryPaneView.relationsNode1(),
+                      queryPaneView.relationsNode2())"
+              >ОК</button>
+            <button class="ui small button" data-bind="click:
+              queryPaneView.relationsNode1().resetAllRelations
+                .bind(queryPaneView.relationsNode1(),
+                      queryPaneView.relationsNode2())"
+              >Сбросить к значениям по умолчанию</button>
         </div>
       </div>
       <!-- /ko -->
