Частичная реализация узлов-ссылок на другие узлы
* Структура данных;
* Отслеживание для каждого узла, с какими узлами он непосредственно
  не связан;
* Кнопка добавления узла-ссылки, возникающая только на тех узлах,
  для которых существуют несмежные узлы;
* автоматический выбор едиственно возможного узла-ссылки
  для данного узла.

--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,8 @@
 
     <!-- ko if: isQueryPaneOn -->
       <!-- ko if: queryPaneView.isTreeVisible -->
-        <query-pane params="queryTree: queryTree"></query-pane>
+        <query-pane
+          params="linearizedQueryTree: linearizedQueryTree"></query-pane>
       <!-- /ko -->
       <!-- ko if: queryPaneView.arePropertiesVisible -->
       <div class="bmpp-propertiesPane">
