--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,8 @@
   </div>
 
   <div class="bmpp-main"
-       data-bind="css: { 'no-pad': queryPaneView.arePropertiesVisible }">
+       data-bind="css: { 'no-pad': queryPaneView.arePropertiesVisible,
+                         'no-scroll': isResultsPaneOn }">
 
     <div id="bmpp-mainWait"
       data-bind="visible: isSearchInProgress() || resultsError()">
@@ -170,7 +171,9 @@
 
     <!-- ko if: isResultsPaneOn -->
     <div class="bmpp-resultsPane" data-bind="component: {
-        name: 'results-pane', params: { resultsData: resultsData }}"></div>
+        name: 'results-pane',
+        params: { resultsData: resultsData, layersData: layersData }
+      }"></div>
     <!-- /ko -->
 
   </div>
