Улучшенный автоподбор масштаба временной шкалы

--- a/src/index.html
+++ b/src/index.html
@@ -179,13 +179,11 @@
   </div>
 </div>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"></script>
-    <script src="semantic/semantic.min.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="semantic/semantic.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.0/knockout-min.js"
-      crossorigin="anonymous"></script>
+      ></script>
     <script src="js/libs/svg.min.js"></script>
     <script src="js/libs/jquery.initialize.min.js"></script>
     <script src="js/spa.js"></script>
