Синхронизирующийся с видео курсор

--- a/src/index.html
+++ b/src/index.html
@@ -172,7 +172,8 @@
     <!-- ko if: isResultsPaneOn -->
     <div class="bmpp-resultsPane" data-bind="component: {
         name: 'results-pane',
-        params: { resultsData: resultsData, layersData: layersData }
+        params: { resultsData: resultsData, layersData: layersData,
+                  cinema: cinema }
       }"></div>
     <!-- /ko -->
 
