Реализована подгрузка слоев для каждого примера
При этом по GET-параметру stub в урле приложения можно получать тестовые
результаты на любые запросы. Для тестовых результатов тестовые слои
будут загружаться только для первого примера, а для остальных будут
выполняться реальные запросы.

Обновил пакеты.

Настроил различные окружения для eslint (в gulpfile.js -- node, а не
browser, в воркере -- worker), чтобы он не подсвечивал ошибки
неправильно.

--- a/src/index.html
+++ b/src/index.html
@@ -61,14 +61,13 @@
 
     <div class="bmpp-pane" data-bind="css: { visiblePane: isResultsPaneOn }"
       style="overflow: hidden">
-      <!-- ko if: isResultsPaneOn() || resultsData() -->
       <div class="bmpp-resultsPane no-layers" data-bind="component: {
           name: 'results-pane',
           params: { resultsData: resultsData, layersData: layersData,
-                    cinema: cinema, viewModel: $root }
+                    cinema: cinema, viewModel: $root,
+                    timeline: timeline }
         }, css: { 'no-layers': showResultsOnly }
         "></div>
-      <!-- /ko -->
     </div>
 
     <div class="bmpp-pane" data-bind="css: { visiblePane: isSubcorpusPaneOn }"
@@ -92,7 +91,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="semantic/semantic.min.js"></script>
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.0/knockout-min.js"
+      src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.1/knockout-min.js"
       ></script>
     <script src="js/libs/svg.min.js"></script>
     <script src="js/libs/jquery.initialize.min.js"></script>
