--- a/src/scraps/side_pane.htm
+++ b/src/scraps/side_pane.htm
@@ -26,6 +26,8 @@
   <!-- ko if: resultsNumber() !== null -->
   <span class="label" data-bind="text: resultsNumber,
     css: { currentResults: !canSearch() }"></span>
+  <span class="bmpp-resultsLoadPercent" data-bind="text: resultsPercent,
+    visible: resultsPercent() !== '100%'"></span>
   <!-- /ko -->
 </div>
 
