Подгружать слои, только если пример изменился
bugfix: Новую версию knockoutjs ещё не загрузили на cdn

--- a/src/index.html
+++ b/src/index.html
@@ -93,6 +93,9 @@
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.1/knockout-min.js"
       ></script>
+    <script>
+      window.ko||document.write('<script src="/js/knockout.min.js"><\/script>');
+    </script>
     <script src="js/libs/svg.min.js"></script>
     <script src="js/libs/jquery.initialize.min.js"></script>
     <script src="js/spa.js"></script>
