Изменился адрес сервера с видеоданными

--- a/src/index.html
+++ b/src/index.html
@@ -100,4 +100,4 @@
     <script src="js/libs/jquery.initialize.min.js"></script>
     <script src="js/spa.js"></script>
   </body>
-</html>
+</html>{# vim: ft=jinja.html #}
