--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="semantic/semantic.min.js"></script>
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.1/knockout-min.js"
+      src="https://unpkg.com/knockout@3.5.1/build/output/knockout-latest.js"
       ></script>
     <script>
       window.ko||document.write('<script src="/js/knockout.min.js"><\/script>');
