Возвращение к компоновке без слоев при назадтии на кнопку "результаты".
Если вкладка с результатами уже открыта и компоновка страница имеет
вид со слоями, то возвращаемся к компоновке без слоев. Если же кнопку
"результаты" нажимают, находясь на другой вкладке (например, "запрос"),
то просто отображаем страницу результатов в той компоновке, которая была
когда мы с нее уходили. При отображении результатов сразу после поиска
всегда используется компоновка "без слоев".

--- a/src/scraps/side_pane.htm
+++ b/src/scraps/side_pane.htm
@@ -17,9 +17,7 @@
   <i class="ui search icon"></i>
 </div>
 <div class="bmpp-sidePane_menuItem ui vertical segment"
-  data-bind="click: function () {
-                      if (canViewResults()) switchOnResultsPane();
-                    },
+  data-bind="click: showResults,
              css: { 'bmpp-sidePane_menuItem--current': isResultsPaneOn,
                      disabled: !canViewResults() }">
   Результаты
