--- a/src/scraps/resopts_pane.htm
+++ b/src/scraps/resopts_pane.htm
@@ -9,7 +9,7 @@
   <div class="bmpp-paneDivider"></div>
   <div class="bmpp-paneButtons">
       <button class="ui small button"
-        data-bind="click: resOptsAdditionalTierTypes.reset"
+        data-bind="click: resOpts.reset"
         >Сбросить к значениям по умолчанию</button>
   </div>
 </div>
