bugfix: В Сафари 11 бегунки имели черный фон и это не лечилось
установкой цвета бэкграунда, но помогло css-свойство will-change
по спекам выступающее как последнее прибежище в случаях проседания
производительности при смене css-свойств.

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
   height: 3em;
   -webkit-animation: segment-spin .6s linear;
   animation: segment-spin .6s linear;
+  will-change: transform;
   animation-name: segment-spin;
   animation-duration: .8s;
   animation-timing-function: linear;
